Prevent animation overflow.

--- a/app/assets/css/components/fields.css
+++ b/app/assets/css/components/fields.css
@@ -7,6 +7,7 @@
 
 .fields {
   position: relative;
+  overflow: hidden;
 }
 .field-buttons {
   display: flex;
